# Codex

./: .gitignore  .gitmodules  AGENTS.md  NEXT_STEPS.md  README.md  index.html
.github/workflows/: deploy-oleamediaco-site.yml  deploy-oleastaging-site.yml  deploy-pages-fallback.yml
Conway/: index.html
MacControl/: README.md  mac_pointer_check.py
OleaMediaCo/: make_offer_pdfs.py  offer-sheet-en.md  offer-sheet-es.html  offer-sheet-es.md
OleaMediaCo/site/: index.html  shared-translations.js  variants-base.css
OleaStaging/: README.md  make_offer_pdfs.py  offer-sheet-en.html  offer-sheet-en.md  offer-sheet-es.html  offer-sheet-es.md
OleaTaxCoSiteConcepts/: README.md  content-workbook.md  index.html
Reversi/: index.html
SortingAlgos/: index.html
byElie/: gallery.html  plans.html  shared.css
conway/: index.html
gmail_idealista_app/: README.md  app.py  com.rookcohen.idealista-mail-report.plist  requirements.txt
imageCleanup/: gemini_cleanup.py
imageTo3MF/: .gitignore  PRD.md  README.md  build_leadlight_app.sh  build_macos_app.py  glass_hybrid_anchor_lab.py  glass_interior_growth_lab.py  glass_piece_grow_lab.py  image_grade_to_3mf.py  image_grade_to_3mf_gui.py  launch_imageTo3MF_gui.applescript  launch_imageTo3MF_gui.command  launch_imageTo3MF_gui.sh  launch_leadlight_gui.applescript  launch_leadlight_gui.command  launch_leadlight_gui.sh  lead_detect_batch_preview.py  material_presets.json  pyproject.toml  snorca_mixed_filament_diagnostic.py
oleamediaco/: index.html  styles.css  variants-base.css
oleataxco/: README.md
reversi/: index.html
(+106 files in other folders)
