[project]
name = "leadlight"
version = "0.1.0"
description = "LeadLight converts images into stained-glass-style multi-object 3MF files for Snapmaker Orca."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lib3mf>=2.4.1",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "pyside6>=6.10.2",
]

[tool.uv]
package = false
